--- a/package.json
+++ b/package.json
@@ -28,17 +28,17 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "compression": "^1.7.1",
-    "connect-redis": "^3.3.3",
-    "dotenv": "^4.0.0",
     "errorhandler": "^1.5.0",
     "express": "^4.16.2",
-    "express-session": "^1.15.6",
     "express-validator": "^4.3.0",
+    "jsonwebtoken": "^8.2.2",
     "lusca": "^1.5.2",
+    "mysql": "^2.15.0",
     "passport": "^0.4.0",
-    "passport-facebook": "^2.1.1",
-    "passport-local": "^1.0.0",
+    "passport-jwt": "^4.0.0",
+    "password-hash": "^1.2.2",
     "redis": "^2.8.0",
+    "reflect-metadata": "^0.1.12",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
     "typeorm": "^0.2.5",
@@ -49,6 +49,7 @@
     "@types/bcrypt-nodejs": "^0.0.30",
     "@types/body-parser": "^1.16.8",
     "@types/compression": "^0.0.35",
+    "@types/connect-redis": "0.0.7",
     "@types/dotenv": "^4.0.2",
     "@types/errorhandler": "^0.0.32",
     "@types/express": "^4.11.1",
@@ -57,13 +58,21 @@
     "@types/lusca": "^1.5.0",
     "@types/morgan": "^1.7.35",
     "@types/node": "^9.4.6",
-    "@types/passport": "^0.4.3",
+    "@types/passport": "^0.4.5",
+    "@types/passport-http-bearer": "^1.0.33",
+    "@types/passport-jwt": "^3.0.1",
     "@types/passport-local": "^1.0.32",
+    "@types/password-hash": "^1.2.20",
     "@types/request": "^2.47.0",
     "@types/winston": "^2.3.7",
     "chai": "^4.1.2",
     "concurrently": "^3.5.1",
     "gulp": "^3.9.1",
+    "gulp-clean": "^0.4.0",
+    "gulp-cli": "^2.0.1",
+    "gulp-npm-dist": "^1.0.2",
+    "gulp-sourcemaps": "^2.6.4",
+    "gulp-typescript": "^4.0.2",
     "jest": "^22.0.4",
     "node-sass": "^4.7.2",
     "nodemon": "^1.13.0",
