--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "target": "es5",
+        "lib": ["es2015"],
         "noImplicitAny": false,
         "moduleResolution": "node",
         "sourceMap": true,
